feat(crm): add working days